# IOT_Project_AOV

./: .gitignore  README.md  __main__.py  app.py  pyproject.toml
Input/: final_oura_df.csv  gpt_recomm.txt  heartrate.csv  mexico_weather.csv  personal_info.csv  uk_weather.csv
Output/oura_data/: complete_data.csv
src/iot_project/: open_ai_llm.py
src/iot_project/dashboard/: app.py  app_callback.py
src/iot_project/dashboard/auto_scraper/: scraper.py
src/iot_project/dashboard/dash_components/: footer.py  navigation.py
src/iot_project/dashboard/general_functions/: color_heatmap_for_tables.py  dash_table_creator.py  heatmap_color.py  styles_lists_function.py  subset_dataframes.py  webrowser_opening.py
src/iot_project/dashboard/pages/callbacks/: day_analysis_callbacks.py  heart_rate_callbacks.py  historical_oura_analysis_callbacks.py  weather_quality_callbacks.py
src/iot_project/dashboard/pages/layouts/: day_analysis_oura_layout.py  heart_rate_layout.py  historical_oura_analysis_layout.py  weather_quality_layout.py
src/iot_project/modules/: aux_functions.py  correlation_df.py  dotenv_loader.py  visualizations.py
src/iot_project/old_files/: basic_analysis_oura.py
src/iot_project/providers/garmin/: garmin_api.py  garmin_api_example.py  garmin_scraper.py
src/iot_project/providers/google/: google_api_example.py
src/iot_project/providers/oura/: oura_api.py  oura_data_manipulation.py  oura_ring_calculations.py  oura_ring_provider.py
