[project]
name = "IOT_Project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Aline Orrantia", email = "ao1724@ic.ac.uk"},
]
dependencies = ["requests>=2.32.3", 
                "pandas>=2.2.3", 
                "python-dotenv>=1.0.1", 
                "oura>=1.3.0", 
                #"garminconnect==0.1.53", 
                "pwinput>=1.0.3", 
                "readchar>=4.2.1", 
                "matplotlib>=3.9.2", 
                "seaborn>=0.13.2", 
                "bs4>=0.0.2", 
                "selenium>=4.27.1", 
                "google-api-python-client>=2.154.0", 
                "google-auth>=2.36.0", 
                "google-auth-oauthlib>=1.2.1", 
                "google-cloud>=0.34.0", 
                "google-cloud-bigquery>=3.27.0", 
                "openpyxl>=3.1.5", 
                "pandas-gbq>=0.24.0", 
                "streamlit>=1.40.2", 
                "plotly>=5.24.1", 
                "numpy>=2.2.0", 
                "openai>=1.57.0", 
                "langchain>=0.3.10", 
                "langchain-community>=0.3.10", 
                "tiktoken>=0.8.0", 
                "dash==2.14.1", 
                "dash-bootstrap-components==1.5.0", 
                "Pillow>=11.0.0", 
                "joblib>=1.4.2", 
                "reportlab>=4.2.5"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
